--- a/app/scss/blocks/_sleep.scss
+++ b/app/scss/blocks/_sleep.scss
@@ -40,6 +40,10 @@
             width: 100%;
             height: 100%;
         }
+
+        &__title {
+            text-align: right;
+        }
     }
 }
 
@@ -67,6 +71,7 @@
     &__stars {
         display: flex;
         line-height: 1.4;
+        flex-wrap: wrap;
 
         img {
             margin-left: 10px;
@@ -75,7 +80,7 @@
 }
 
 .sleep-info {
-    max-width: 1205px;
+    max-width: 1190px;
     width: 100%;
     margin: 0 auto;
     padding: 0 15px;
@@ -88,6 +93,8 @@
         max-width: 290px;
         min-width: 210px;
         min-height: 200px;
+        margin: 0 15px;
+        margin-bottom: 40px;
     }
 
     &__title {
@@ -165,5 +172,5 @@
 
 .btn-sleep {
     justify-content: center;
-    margin-top: 70px;
+    margin-top: 30px;
 }
