--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -103,6 +103,10 @@ li {list-style: none;}
     text-transform: uppercase;
 }
 
+.text-common {
+    font-size: 40px;
+}
+
 .slider-arrow {
     cursor: pointer;
     transition: $transition-common;
