--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -10,6 +10,8 @@ body {
     font-family: 'Fira Sans', sans-serif;
     font-weight: $font-regular;
     line-height: 1.45;
+    min-width: 320px;
+    overflow-x: hidden;
 }
 
 a {
