fixed background src

--- a/app/scss/blocks/_header.scss
+++ b/app/scss/blocks/_header.scss
@@ -165,7 +165,7 @@
 
     &-item {
         height: 100vh;
-        background: url('../img/header/header-bg.jpg') no-repeat;
+        background: url('../../img/header/header-bg.jpg') no-repeat;
         background-size: cover;
         //background-position: center;
         position: relative;
