--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -153,7 +153,7 @@ li {list-style: none;}
             display: inline-block;
             height: 20px;
             width: 25px;
-            background: url("../img/header/arrow-right.svg") no-repeat;
+            background: url("../../img/header/arrow-right.svg") no-repeat;
             z-index: 7;
             margin-left: 17px;
         }
