--- a/scss/blocks/_surf.scss
+++ b/scss/blocks/_surf.scss
@@ -244,6 +244,7 @@
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
+    cursor: pointer;
     
 
    &__inner {
