--- a/app/scss/blocks/_global.scss
+++ b/app/scss/blocks/_global.scss
@@ -130,6 +130,8 @@ li {list-style: none;}
     width: max-content;
     margin: 0 auto;
 
+    transition: color $transition-common;
+
     span {
         background-color: $color-secondary;
         display: flex;
@@ -139,6 +141,8 @@ li {list-style: none;}
         padding-left: 17px;
         padding-right: 17px;
         position: relative;
+
+        transition: background $transition-common;
 
         &::before {
             content: "";
@@ -152,15 +156,30 @@ li {list-style: none;}
 
         &::after {
             content: "";
+            border: solid $color-common;
+            border-width: 0 3px 3px 0;
             display: inline-block;
-            height: 20px;
-            width: 25px;
-            background: url("../../img/header/arrow-right.svg") no-repeat;
-            z-index: 7;
-            margin-left: 17px;
+            padding: 8px;
+            transform: rotate(-45deg);
+            margin-left: 5px;
         }
     }
 }
+
+.btn-common:hover {
+    border-top: 3px solid $color-secondary;
+    border-bottom: 3px solid $color-secondary;
+    color: $color-secondary;
+
+    span {
+        background: transparent;
+    }
+
+    span::after {
+        border-color: $color-secondary;
+    }
+}
+
 
 .opacity-off {
     opacity: $opacity-common;
